Don't allow removal from other airlines if they have flights
git-svn-id: file:///home/svn/DVA2006@13621 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a